--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,8 @@ h5 {
 
 section {
   position: relative;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .container {
@@ -1002,18 +1004,31 @@ html.has-scroll-dragging {
 
 .showreel__container {
   max-width: 1440px;
-  height: 500px;
   padding: 0;
   overflow: hidden;
 }
 
-.showreel__button {
+.showreel__inview {
+  height: var(--height);
+  overflow: hidden;
+  position: relative;
+}
+
+.showreel__button, .showreel__target {
   width: 100%;
+  position: absolute;
+  top: calc(var(--height) - var(--height)*2);
+  left: 0;
+  right: 0;
+}
+
+.showreel__target {
+  bottom: calc(var(--height) - var(--height)*2);
 }
 
 .showreel__block video {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: var(--height);
   object-fit: cover;
 }
 
