--- a/css/style.css
+++ b/css/style.css
@@ -158,9 +158,9 @@ section {
   visibility: visible;
 }
 
-.dark .overlay.active {
-  /* opacity: 0.9; */
-}
+/* .dark .overlay.active {
+  opacity: 0.9;
+} */
 
 .main__section {
   position: relative;
@@ -229,11 +229,11 @@ section {
   padding: 14.5px 26.5px;
   background: transparent;
   border: none;
-  color: var(--text);
   font-size: 12px;
   font-weight: 400;
   line-height: 11px;
   border-radius: 30px;
+  color: var(--text);
   cursor: pointer;
 }
 
@@ -286,11 +286,20 @@ section {
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
+  color: var(--text);
   position: relative;
   margin: auto;
   z-index: 1;
   -webkit-transition: color 0.3s linear;
   transition: color 0.3s linear;
+}
+
+.btn:hover .button__text {
+  color: var(--bg);
+}
+
+.dark .btn:hover .button__text {
+  color: var(--text);
 }
 
 .button__hover {
@@ -328,9 +337,11 @@ section {
   justify-content: center;
   width: 25px;
   height: 25px;
-  font-size: 10px;
-  font-weight: 700;
-  line-height: 1;
+  font-family: var(--text-font);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  color: var(--text);
   -webkit-transition: color 0.3s linear;
   transition: color 0.3s linear;
 }
@@ -567,10 +578,6 @@ html.has-scroll-dragging {
   overflow: hidden;
 }
 
-.header__burger.active span {
-  background: var(--purple);
-}
-
 .header__burger span:nth-child(even) {
   left: 50%;
   border-radius: 0;
@@ -646,6 +653,26 @@ html.has-scroll-dragging {
   line-height: 12px;
   color: var(--text);
   text-transform: uppercase;
+}
+
+.icon__tg {
+  width: 16.75px;
+  height: 14.31px;
+}
+
+.icon__bn {
+  width: 16.67px;
+  height: 16.67px;
+}
+
+.icon__vk {
+  width: 20px;
+  height: 11.43px;
+}
+
+.icon__be {
+  width: 20px;
+  height: 13.2px;
 }
 
 /* end header */
@@ -727,58 +754,6 @@ html.has-scroll-dragging {
   display: none;
 }
 
-.preloader__image circle {
-  -webkit-transition: -webkit-transform 0.3s linear, fill 0.3s ease-out;
-  transition: transform 0.3s linear, fill 0.3s ease-out;
-  -webkit-transform: translate(0, 0);
-  transform: translate(0, 0);
-  fill: var(--text);
-}
-
-.preloader__image circle:nth-of-type(7) {
-  fill: var(--purple);
-}
-
-.preloader__image circle:nth-of-type(1) {
-  -webkit-animation: circle1 1s infinite linear;
-  animation: circle1 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(2) {
-  -webkit-animation: circle2 1s infinite linear;
-  animation: circle2 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(3) {
-  -webkit-animation: circle3 1s infinite linear;
-  animation: circle3 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(4) {
-  -webkit-animation: circle4 1s infinite linear;
-  animation: circle4 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(5) {
-  -webkit-animation: circle5 1s infinite linear;
-  animation: circle5 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(6) {
-  -webkit-animation: circle6 1s infinite linear;
-  animation: circle6 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(8) {
-  -webkit-animation: circle8 1s infinite linear;
-  animation: circle8 1s infinite linear;
-}
-
-.preloader__image circle:nth-of-type(9) {
-  -webkit-animation: circle9 1s infinite linear;
-  animation: circle9 1s infinite linear;
-}
-
 /* end preloader */
 
 /* start header__nav */
@@ -823,11 +798,36 @@ html.has-scroll-dragging {
   position: relative;
 }
 
-.header__nav_block .container {
-  padding: 80px 0 115px;
+.header__nav_container {
+  display: flex;
+  max-width: 800px;
+  min-height: calc(var(--height) - 80px);
+  padding: 60px 0;
+  flex-direction: column;
+  justify-content: center;
+  gap: 110px;
+}
+
+.header__nav_flex {
+  display: flex;
+  width: 100%;
+}
+
+.header__nav__contact {
+  display: flex;
+  width: 50%;
+  padding: 0 50px;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 .header__nav_list {
+  display: flex;
+  width: 50%;
+  padding: 0 50px;
+  flex-direction: column;
+  gap: 15px;
   position: relative;
 }
 
@@ -845,10 +845,6 @@ html.has-scroll-dragging {
   transition: background-color 0.3s linear;
 }
 
-.header__nav_item:not(:last-child) {
-  margin-bottom: 15px;
-}
-
 .header__nav_link,
 .header__nav_link:hover,
 .header__nav_link:active {
@@ -858,13 +854,18 @@ html.has-scroll-dragging {
 }
 
 .header__nav_link span {
+  height: 40px;
   position: relative;
   z-index: 2;
   display: block;
-  padding-right: 19px;
-  padding-left: 15px;
-  -webkit-transition: color 0.3s linear;
-  transition: color 0.3s linear;
+  font-family: var(--text-font);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 45px;
+  color: var(--text);
+  text-transform: uppercase;
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
   overflow: hidden;
 }
 
@@ -872,12 +873,9 @@ html.has-scroll-dragging {
   background-color: var(--purple);
 }
 
-.header__nav_item.active .header__nav_link span {
-  color: var(--bg);
-}
-
-.dark .header__nav_item.active .header__nav_link span {
-  color: var(--text);
+.header__nav_item.active .header__nav_link span,
+.header__nav_link:hover span {
+  color: var(--purple);
 }
 
 .header__subnav_list {
@@ -889,30 +887,45 @@ html.has-scroll-dragging {
 }
 
 .header__nav_contact_item p {
-  margin-bottom: 22px;
-  font-size: 10px;
+  margin-bottom: 20px;
+  font-family: var(--text-font);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  color: var(--text-gray);
 }
 
-.header__nav_bottom {
-  margin-top: 80px;
+.header__nav_contact_head {
+  font-family: var(--title-font);
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 45px;
+}
+
+.settings__block {
+  width: 50%;
+  padding: 0 50px;
 }
 
 .clr-mode {
   position: relative;
   padding: 7px 30px;
   width: 160px;
+  font-family: var(--text-font);
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 400;
+  line-height: 14px;
+  color: var(--text);  
   text-transform: uppercase;
   border: 1px solid var(--border);
 }
 
-[data-mode-active="light"] {
+[data-clr-mode-active="light"] {
   text-align: right;
 }
 
-[data-mode-active="light"] [data-mode="dark"],
-[data-mode-active="dark"] [data-mode="light"]  {
+[data-clr-mode-active="light"] [data-clr-mode="dark"],
+[data-clr-mode-active="dark"] [data-clr-mode="light"]  {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -923,17 +936,22 @@ html.has-scroll-dragging {
   position: absolute;
   top: 50%;
   display: none;
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
 }
 
-.clr-mode__btn[data-mode="dark"] {
+.clr-mode__btn svg {
+  width: 16.06px;
+  height: 17.51px;
+}
+
+.clr-mode__btn[data-clr-mode="dark"] {
   left: -1px;
   background: var(--purple);
   color: #cfcfcf;
 }
 
-.clr-mode__btn[data-mode="light"] {
+.clr-mode__btn[data-clr-mode="light"] {
   right: -1px;
   background: var(--orange);
   color: #fff;
@@ -943,21 +961,18 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
+  width: 100%;
   flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  gap: 20px;
 }
 
 .header__nav_bottom_social {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
+  align-items: center;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 15px 60px;
 }
 
 .header__nav_bottom_link {
@@ -990,14 +1005,22 @@ html.has-scroll-dragging {
 }
 
 .change-language {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  width: 50%;
+  padding: 0 50px;
   align-items: center;
 }
 
 .change-language__icon {
   display: flex;
+  width: 16.67px;
+  height: 16.67px;
 }
+
+.change-language__icon svg {
+  width: 16.67px;
+  height: 16.67px;
+}
+
 /* end header__nav */
 
 /* start showreel */
@@ -1902,7 +1925,8 @@ html.has-scroll-dragging {
   display: flex;
   padding: 190px 0 240px;
   flex-direction: column;
-  gap: 25px;
+  align-items: center;
+  gap: 60px 15px;
   position: absolute;
   top: 0;
   left: 10px;
@@ -2033,7 +2057,7 @@ html.has-scroll-dragging {
 .accredited__flex {
   width: 100%;
   max-width: 50%;
-  margin: auto 0 0 0;
+  margin: auto 0 0 1px;
   padding: 40px 30px;
   position: absolute;
   left: 50%;
@@ -2167,6 +2191,7 @@ html.has-scroll-dragging {
   display: flex;
   width: 35px;
   height: 35px;
+  flex: 0 0 auto;
   align-items: center;
   justify-content: center;
   background-color: var(--text);
