--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,50 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
+  color: var(--text);
+}
+
+h1 {
+  font-family: var(--title-font);
+  font-size: 78px;
+  font-weight: 700;
+  line-height: 98px;
+  color: var(--text);
+}
+
+h2 {
+  font-family: var(--title-font);
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 68px;
+}
+
+h3 {
+  font-family: var(--title-font);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 45px;
+}
+
+h4 {
+  font-family: var(--title-font);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 25px;
+}
+
+h5 {
+  font-family: var(--title-font);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 25px;
+}
+
+h6 {
+  font-family: var(--text-font);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
 }
 
 section {
@@ -396,6 +440,66 @@ section {
   padding: 100px 0 0;
   border-left: 1px solid var(--border);
   border-right: 1px solid var(--border);
+}
+
+.btn__arrow {
+  height: 35px;
+  width: 35px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  -webkit-transform: translateZ(-17.5px);
+  transform: translateZ(-17.5px);
+  z-index: 2;
+}
+
+.projects__arrow {
+  position: absolute;
+  bottom: 5px;
+}
+
+.projects__item:nth-child(1n) .projects__arrow {
+  right: 5px;
+}
+
+.projects__item:nth-child(2n) .projects__arrow {
+  left: 5px;
+}
+
+.btn__arrow:hover {
+  -webkit-transform: rotateX(-90deg) translateY(17.5px);
+  transform: rotateX(-90deg) translateY(17.5px);
+}
+
+.btn__side {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--text);
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.btn__side svg {
+  width: 10px;
+  height: 10px;
+}
+
+.btn__side_default {
+  color: var(--bg);
+  background-color: var(--text);
+  -webkit-transform: translateZ(17.5px);
+  transform: translateZ(17.5px);
+}
+
+.btn__side_hover {
+  color: var(--text);
+  background-color: var(--bg);
+  -webkit-transform: rotateX(90deg) translateZ(17.5px);
+  transform: rotateX(90deg) translateZ(17.5px);
 }
 
 /* end buttons */
@@ -1975,11 +2079,6 @@ html.has-scroll-dragging {
   height: 160px;
   position: relative;
   z-index: 1;
-  font-family: var(--title-font);
-  font-size: 78px;
-  font-weight: 700;
-  line-height: 98px;
-  color: var(--text);
 }
 
 .digital__head span {
@@ -2100,11 +2199,6 @@ html.has-scroll-dragging {
 
 .accredited__head {
   height: 20px;
-  font-family: var(--title-font);
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 25px;
-  color: var(--text);
 }
 
 .accredited__desc {
@@ -2186,30 +2280,23 @@ html.has-scroll-dragging {
   margin: 20px 0 0;
 }
 
-.expertise__button span {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 35px;
-  height: 35px;
-  flex: 0 0 auto;
-  align-items: center;
-  justify-content: center;
+.expertise__btn {
+  color: var(--bg);
   background-color: var(--text);
 }
 
-.expertise__button svg {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  -webkit-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: -webkit-transform 0.4s linear;
-  transition: transform 0.4s linear;
-  color: var(--bg);
+.expertise__button.active .btn__arrow,
+.expertise__button.active .btn__arrow:hover {
+  -webkit-transform: rotateX(-90deg) translateY(17.5px);
+  transform: rotateX(-90deg) translateY(17.5px);
 }
 
-.expertise__button.active svg {
+.expertise__button .btn__arrow:hover {
+  -webkit-transform: translateZ(-17.5px);
+  transform: translateZ(-17.5px);
+}
+
+.expertise__button .btn__side_hover svg {
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
 }
@@ -2319,11 +2406,6 @@ html.has-scroll-dragging {
 
 .expertise__head {
   padding: 0 0 0 30px;
-  font-family: var(--title-font);
-  font-size: 54px;
-  font-weight: 700;
-  line-height: 68px;
-  color: var(--text);
 }
 
 .expertise__desc::before {
@@ -2367,7 +2449,7 @@ html.has-scroll-dragging {
 
 /* end expertise */
 
-/* start expertise */
+/* start projects */
 
 .projects__container {
   max-width: 1440px;
@@ -2393,11 +2475,6 @@ html.has-scroll-dragging {
   width: 50%;
   padding: 0 0 0 60px;
   align-items: center;
-  font-family: var(--text);
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 45px;
-  color: var(--text);
 }
 
 .projects__right {
@@ -2485,14 +2562,6 @@ html.has-scroll-dragging {
   transition: transform 0.2s linear;
 }
 
-.projects__heading {
-  font-family: var(--text-font);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 24px;
-  color: var(--text);
-}
-
 .projects__description {
   font-family: var(--text-font);
   font-size: 16px;
@@ -2502,17 +2571,8 @@ html.has-scroll-dragging {
 }
 
 .projects__arrow {
-  height: 35px;
-  width: 35px;
   position: absolute;
   bottom: 5px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
-  -webkit-transform: translateZ(-17.5px);
-  transform: translateZ(-17.5px);
-  z-index: 2;
 }
 
 .projects__item:nth-child(1n) .projects__arrow {
@@ -2523,43 +2583,156 @@ html.has-scroll-dragging {
   left: 5px;
 }
 
-.projects__link:hover .projects__arrow {
+.projects__link:hover .btn__arrow {
   -webkit-transform: rotateX(-90deg) translateY(17.5px);
   transform: rotateX(-90deg) translateY(17.5px);
 }
 
-.projects__side {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.projects__side svg {
-  width: 10px;
-  height: 10px;
-}
-
-.projects__item:nth-child(2n) .projects__side svg {
+.projects__item:nth-child(2n) .btn__side svg {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
-.projects__side_default {
+.projects__arrow .btn__side_default {
   background-color: var(--bg);
   color: var(--text);
   -webkit-transform: translateZ(17.5px);
   transform: translateZ(17.5px);
 }
 
-.projects__side_hover {
+.projects__arrow .btn__side_hover {
   color: var(--bg);
   background-color: var(--text);
   -webkit-transform: rotateX(90deg) translateZ(17.5px);
   transform: rotateX(90deg) translateZ(17.5px);
 }
 
-/* end expertise */
+/* end projects */
+
+/* start articles */
+
+.articles__container {
+  max-width: 1440px;
+  background-color: var(--bg);
+}
+
+.articles__block {
+  padding: 20px 0 60px;
+}
+
+.articles__slider {
+  position: relative;
+}
+
+.articles__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.articles__item {
+  width: calc(25% - 30px);
+  border: 1px solid var(--border);
+}
+
+.articles__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+
+.articles__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 200px;
+  position: relative;
+}
+
+.articles__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.articles__date {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  padding: 3px 10px;
+  font-family: var(--title-font);
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15px;
+  border: 1px solid var(--border);
+  color: var(--text);
+  background-color: var(--bg);
+}
+
+.articles__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: calc(100% - 200px);
+  padding: 60px 40px 40px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.articles__desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+  font-family: var(--title-font);
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15px;
+}
+
+.articles__prev,
+.articles__next {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 35px;
+  height: 35px;
+  margin-top: 0;
+  align-items: center;
+  justify-content: center;
+  top: 210px;
+  bottom: auto;
+  color: var(--bg);
+  border: 1px solid var(--bg);
+  background: var(--text);
+  background-color: var(--text);
+  -webkit-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
+}
+
+.articles__prev:hover .btn__arrow:hover,
+.articles__next:hover .btn__arrow:hover {
+  -webkit-transform: rotateX(-90deg) translateY(17.5px);
+  transform: rotateX(-90deg) translateY(17.5px);
+}
+
+.articles__prev {
+  left: 0;
+  right: auto;
+}
+
+.articles__next {
+  left: auto;
+  right: 0;
+}
+
+.articles__prev svg,
+.articles__next svg {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+}
+
+/* end articles */
