--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,8 @@ section {
   position: relative;
   opacity: 1;
   pointer-events: all;
+  background-color: var(--bg);
+  overflow: hidden;
 }
 
 .container {
@@ -1130,9 +1132,12 @@ html.has-scroll-dragging {
 
 /* start showreel */
 
+.showreel {
+  padding: 60px 0;
+}
+
 .showreel__container {
   max-width: 1440px;
-  margin: 60px auto;
   padding: 0;
   overflow: hidden;
 }
@@ -2453,11 +2458,14 @@ html.has-scroll-dragging {
 
 .projects__container {
   max-width: 1440px;
+  z-index: 1;
 }
 
 .projects__block {
   padding: 60px 0;
   border-bottom: 1px solid var(--border);
+  background-color: var(--bg);
+  overflow: hidden;
 }
 
 .projects__flex {
