--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,7 @@ html.has-scroll-dragging {
 .has-scroll-scrolling .c-scrollbar {
   opacity: 1
 }
+
 [data-scroll-direction=horizontal].c-scrollbar {
   bottom: 0;
   height: 10px;
@@ -571,21 +572,21 @@ html.has-scroll-dragging {
   transform: scaleY(1);
   width: 100%
 }
+
 [data-scroll-direction=horizontal].c-scrollbar:hover {
   -webkit-transform: scaleY(1.3);
   transform: scaleY(1.3)
 }
 
 .c-scrollbar_thumb {
+  width: 8px;
   background-color: var(--purple);
   cursor: -webkit-grab;
   cursor: grab;
-  margin: 2px;
   opacity: 1;
   position: absolute;
   right: 0;
   top: 0;
-  width: 7px
 }
 
 .has-scroll-dragging .c-scrollbar_thumb {
