--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,8 @@ section {
 /* start buttons */
 
 .text {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   height: 1em;
   flex-direction: column;
@@ -255,6 +257,8 @@ section {
 }
 
 .text__rotate {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   height: 1em;
   line-height: 100%;
@@ -290,9 +294,9 @@ section {
   flex: 0 0 auto;
   position: relative;
   z-index: 1;
-  overflow: hidden;
   -webkit-transition: border 0.3s linear;
   transition: border 0.3s linear;
+  overflow: hidden;
 }
 
 .btn svg path {
@@ -413,6 +417,8 @@ section {
 }
 
 .settings__language_btn {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -487,6 +493,7 @@ section {
   transition: transform 0.2s ease-in-out;
   -webkit-transform: translateZ(-17.5px);
   transform: translateZ(-17.5px);
+  position: relative;
   z-index: 2;
 }
 
@@ -503,12 +510,14 @@ section {
   left: 5px;
 }
 
-.btn__arrow:hover {
+.btn__arrow:hover, .active .btn__arrow {
   -webkit-transform: rotateX(-90deg) translateY(17.5px);
   transform: rotateX(-90deg) translateY(17.5px);
 }
 
 .btn__side {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   width: 100%;
   height: 100%;
@@ -563,8 +572,6 @@ html.has-scroll-dragging {
 
 .has-scroll-smooth [data-scroll-container] {
   min-height: var(--height);
-  -webkit-transform: perspective(1px);
-  transform: perspective(1px);
 }
 
 [data-scroll-direction=horizontal] [data-scroll-container] {
@@ -645,6 +652,8 @@ html.has-scroll-dragging {
 /* start header */
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 80px;
   align-items: center;
@@ -673,14 +682,14 @@ html.has-scroll-dragging {
 }
 
 .header__progress {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
   width: 100%;
   height: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
   -webkit-transition: height 0.3s linear;
   transition: height 0.3s linear;
   background: transparent;
@@ -790,6 +799,8 @@ html.has-scroll-dragging {
 }
 
 .header__right {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   align-items: center;
   gap: 60px;
@@ -948,6 +959,8 @@ html.has-scroll-dragging {
 }
 
 .header__nav_container {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   min-height: calc(var(--height) - 80px);
   padding: 60px 0;
@@ -957,11 +970,15 @@ html.has-scroll-dragging {
 }
 
 .header__nav_flex {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   width: 100%;
 }
 
 .header__nav__contact {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   width: 50%;
   padding: 0 50px;
@@ -971,6 +988,8 @@ html.has-scroll-dragging {
 }
 
 .header__nav_list {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   width: 330px;
   padding: 0 50px;
@@ -1065,6 +1084,8 @@ html.has-scroll-dragging {
 
 [data-clr-mode-active="light"] [data-clr-mode="dark"],
 [data-clr-mode-active="dark"] [data-clr-mode="light"]  {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1154,6 +1175,8 @@ html.has-scroll-dragging {
 }
 
 .settings__language_icon {
+  display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   width: 16.67px;
   height: 16.67px;
@@ -1864,19 +1887,19 @@ html.has-scroll-dragging {
 }
 
 .spec__player.spec__fullscreen {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  height: 100%;
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  height: 100%;
-  width: 100%;
   z-index: 10000000;
   background: #000;
   border-radius: 0 !important;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
 }
 
 .spec__overlay {
@@ -1939,20 +1962,20 @@ html.has-scroll-dragging {
 }
 
 .spec__button {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
   max-height: 80px;
   max-width: 80px;
+  padding: 0;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+  justify-content: center;
   background: none;
   border: 0;
   line-height: 1;
   outline: 0;
-  padding: 0;
   cursor: pointer;
-  -ms-flex-pack: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
 }
 
 .spec__button.toggle {
@@ -2269,7 +2292,6 @@ html.has-scroll-dragging {
 }
 
 .minimal .progress {
-  position: relative;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -2279,6 +2301,7 @@ html.has-scroll-dragging {
   background: rgba(0, 0, 0, 0.5);
   cursor: pointer;
   border-radius: 4px;
+  position: relative;
 }
 
 .minimal .progress__filled {
@@ -2326,19 +2349,19 @@ html.has-scroll-dragging {
 }
 
 .compact__button {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  max-width: 50px;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+  justify-content: center;
   background: none;
   border: 0;
   line-height: 1;
   outline: 0;
   padding: 0;
   cursor: pointer;
-  -ms-flex-pack: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  max-width: 50px;
 }
 
 .compact__button i {
@@ -2430,7 +2453,6 @@ html.has-scroll-dragging {
 }
 
 .compact .progress {
-  position: relative;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -2440,6 +2462,7 @@ html.has-scroll-dragging {
   background: rgba(0, 0, 0, 0.5);
   cursor: pointer;
   border-radius: 4px;
+  position: relative;
 }
 
 .compact .progress__filled {
