--- a/css/style.css
+++ b/css/style.css
@@ -596,8 +596,8 @@ html.has-scroll-dragging {
   top: 0;
   -webkit-transform-origin: center right;
   transform-origin: center right;
-  -webkit-transition: opacity .3s, -webkit-transform .3s;
-  transition: transform .3s, opacity .3s;
+  -webkit-transition: opacity .3s, -webkit-transform .3s, width .3s;
+  transition: transform .3s, opacity .3s, width .3s;
   z-index: 2;
 }
 
@@ -613,33 +613,52 @@ html.has-scroll-dragging {
 }
 
 [data-scroll-direction=horizontal].c-scrollbar {
-  bottom: 0;
+  width: 100%;
   height: 10px;
   top: auto;
+  bottom: 0;
   -webkit-transform: scaleY(1);
   transform: scaleY(1);
-  width: 100%
 }
 
 [data-scroll-direction=horizontal].c-scrollbar:hover {
-  -webkit-transform: scaleY(1.3);
-  transform: scaleY(1.3)
+  -webkit-transform: scaleY(3);
+  transform: scaleY(3)
 }
 
 .c-scrollbar_thumb {
   width: 3px;
+  position: absolute;
+  right: 0;
+  top: 0;
   background-color: var(--purple);
   cursor: -webkit-grab;
   cursor: grab;
   opacity: 1;
-  position: absolute;
-  right: 0;
-  top: 0;
+  -webkit-transition: width .3s;
+  transition: width .3s;
+}
+
+.c-scrollbar:hover .c-scrollbar_thumb {
+  width: 12px;
+}
+
+.scrollbar-track,
+.scrollbar-thumb,
+.scrollbar-track-y {
+  -webkit-transition: width .3s, opacity .3s;
+  transition: width .3s, opacity .3s;
+}
+
+.scrollbar-track:hover,
+.scrollbar-track:hover .scrollbar-thumb,
+.scrollbar-track:hover.scrollbar-track-y {
+  width: 12px;
 }
 
 .has-scroll-dragging .c-scrollbar_thumb {
   cursor: -webkit-grabbing;
-  cursor:grabbing
+  cursor: grabbing;
 }
 
 [data-scroll-direction=horizontal] .c-scrollbar_thumb {
