--- a/css/style.css
+++ b/css/style.css
@@ -3126,6 +3126,16 @@ html.has-scroll-dragging {
   background-color: var(--bg);
 }
 
+.articles__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 0 60px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 .articles__block {
   padding: 20px 0 60px;
 }
