--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,12 @@ section {
 /* start scroll */
 
 html.has-scroll-smooth {
-  overflow: hidden
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: hidden;
 }
 
 html.has-scroll-dragging {
